[package]
name = "warp-websocket-server-tutorial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1", features = ["full"]  }
tokio-stream = "0.1.14"
uuid = "1.3.3"
warp = "0.3.5"
